<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="75dp" />
    <TextView
        android:id="@+id/text"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:text="App Stats"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintBottom_toBottomOf="parent" >
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:layout_constraintBottom_toBottomOf="parent" >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                android:text="Reset Run Data"
                android:onClick="clearRunData"
                app:layout_constraintTop_toBottomOf="parent"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                />
            <LinearLayout
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/create"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:tag="create"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:text="@string/create" />
                <TextView
                    android:id="@+id/start"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:tag="start"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:text="@string/start"/>
                <TextView
                    android:id="@+id/resume"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:tag="create"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:text="@string/resume"/>
                <TextView
                    android:id="@+id/pause"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:tag="create"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:text="@string/pause"/>
                <TextView
                    android:id="@+id/stop"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:tag="create"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:text="@string/stop"/>
                <TextView
                    android:id="@+id/restart"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:tag="create"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:text="@string/restart"/>
                <TextView
                    android:id="@+id/destroy"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:tag="create"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:text="@string/destroy"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:layout_constraintBottom_toBottomOf="parent" >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                android:text="Reset Lifetime Data"
                app:layout_constraintTop_toBottomOf="parent"
                android:onClick="clearLifetimeData"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
                <TextView
                    android:id="@+id/lcreate"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:tag="create"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:text="@string/create" />
                <TextView
                    android:id="@+id/lstart"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:tag="start"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:text="@string/start"/>
                <TextView
                    android:id="@+id/lresume"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:tag="resume"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:text="@string/resume"/>
                <TextView
                    android:id="@+id/lpause"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:tag="pause"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:text="@string/pause"/>
                <TextView
                    android:id="@+id/lstop"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:tag="stop"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:text="@string/stop"/>
                <TextView
                    android:id="@+id/lrestart"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:tag="restart"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:text="@string/restart"/>
                <TextView
                    android:id="@+id/ldestroy"
                    android:layout_width="170dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:tag="destroy"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:text="@string/destroy"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>